--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .settings-icon::after {
-  content: url(/images/settings.png);
+  content: url(../images/settings.png);
   display: flex;
   filter: opacity(0.8);
   position: absolute;
