--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .wrap {
-  background: url(/images/g4.jpg);
+  background: url(../images/g4.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
